--- a/public/styles/layout/_body.scss
+++ b/public/styles/layout/_body.scss
@@ -4,9 +4,11 @@ body {
   background-color: var(--bg);
   color: var(--text);
   width: 100%;
+  max-height: 100dvh;
   height: 100dvh;
   overflow: auto;
   position: relative;
   display: flex;
   flex-flow: column;
+  justify-content: space-between;
 }
